java9 deprecations fixed
git-svn-id: svn://svn.code.sf.net/p/jsidplay2/code/trunk@1853 05cac4c1-a8e4-46c3-9d4b-80028926d4ef